1999-03-14  Miro Jurisic  <meeroh@mit.edu>

	* set_ccache.c (gss_krb5_ccache_name): Now compiles

1999-03-11  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* set_ccache.c (gss_krb5_ccache_name): Added new Krb5 specific
		interface to set the default credentials cache name.

1999-02-19  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (DLL_FILE_DEF): Tell the Makefile template that we
		are building object files for the GSSAPI DLL.

	* krb5_gss_glue.c: Change use of KRB5_DLLIMP to be GSS_DLLIMP.

Mon Dec 21 19:50:04 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context): Eliminate
 		double free of ap_req.data, and initialize ctypes to be
 		NULL to avoid freeing a pointer to stack garbage when
 		doing a V1 mechanism accept_sec_contxt.

	* init_sec_context.c: Re-arrange program logic to simplify and
		factor out code; fix gss_init_sec_context() so that if the
		default OID is passed to the init_sec_context, it will use
		the V1 mechanism if a single DES enctype is used.   Error
		handling was revamped to make it simpler and cleaner, and
		to assure that we don't have memory leaks on error returns.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Fri Nov  6 09:19:23 1998  Ezra Peisach  <epeisach@mit.edu>

	* k5unseal.c (kg2_unwrap_integ): Handle case of malloc(0)
	returning NULL.

1998-10-27  Marc Horowitz  <marc@mit.edu>

	* Makefile.in, accept_sec_context.c, acquire_cred.c, canon_name.c,
	delete_sec_context.c, disp_status.c, gssapiP_krb5.h,
	gssapi_err_krb5.et, gssapi_krb5.c, gssapi_krb5.h,
	init_sec_context.c, inq_cred.c, inq_names.c, k5seal.c, k5unseal.c,
	rel_oid.c, ser_sctx.c, util_cksum.c, util_crypt.c, util_seed.c,
	util_seqnum.c, wrap_size_limit.c: convert to new crypto api.
	Implement new krb5 v2 gssapi mechanism.

	* add_cred.c, util_ctxsetup.c: New files needed to implement the